--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h2{
 }
 
 p{
-    font-size: 20px;
+    font-size: 24px;
     padding: 10px 0 0 10px;
 }
 
@@ -70,7 +70,7 @@ div{
 }
 
 .green{
-    background-color: #00D800;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
     border-width: 2px 5px 0px 0px;
